GSettingsSchema: add API for introspecting keys

So far only supporting getting key summary/description.

https://bugzilla.gnome.org/show_bug.cgi?id=668232